fix font on mobile?

--- a/index.css
+++ b/index.css
@@ -3,7 +3,13 @@ body {
     color: lightgray;
     padding: 0.3em;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 8vw;
+    font-size: large;
+}
+
+@media only screen and (max-width: 600px) {
+    * {
+        font-size: 5vw;
+    }
 }
 
 *,*::before,*::after {
